# homewatch

./: CMakeLists.txt  main.cpp
controllers/: DefaultController.cpp  DefaultController.hpp
model/: MainPipeline.cpp  MainPipeline.hpp  YoloInference.cpp  YoloInference.hpp
